--- a/frontend-web/nginx.conf
+++ b/frontend-web/nginx.conf
@@ -52,10 +52,9 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-Host  $host;
       proxy_set_header X-Forwarded-Port  $server_port;
-
-      proxy_set_header Authorization $http_authorization;
+      proxy_set_header Authorization     $http_authorization;
+      proxy_set_header Cookie            $http_cookie;   # <-- ensure cookies flow
       proxy_pass_request_headers on;
-
       proxy_redirect off;
     }
 
@@ -69,10 +68,9 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-Host  $host;
       proxy_set_header X-Forwarded-Port  $server_port;
-
-      proxy_set_header Authorization $http_authorization;
+      proxy_set_header Authorization     $http_authorization;
+      proxy_set_header Cookie            $http_cookie;   # <-- ensure cookies flow
       proxy_pass_request_headers on;
-
       proxy_redirect off;
     }
   }
