--- a/frontend-web/nginx.conf
+++ b/frontend-web/nginx.conf
@@ -22,6 +22,16 @@ http {
   sendfile on;
   keepalive_timeout 65;
 
+  # ---- fix 400 'Request Header Or Cookie Too Large' ----
+  client_header_buffer_size 16k;
+  large_client_header_buffers 8 64k;
+
+  # (optional) help upstream proxying of larger headers
+  proxy_buffer_size        16k;
+  proxy_buffers            8 32k;
+  proxy_busy_buffers_size  64k;
+  # ------------------------------------------------------
+
   server {
     listen 80 default_server;
     server_name _;
@@ -53,7 +63,7 @@ http {
       proxy_set_header X-Forwarded-Host  $host;
       proxy_set_header X-Forwarded-Port  $server_port;
       proxy_set_header Authorization     $http_authorization;
-      proxy_set_header Cookie            $http_cookie;   # <-- ensure cookies flow
+      proxy_set_header Cookie            $http_cookie;
       proxy_pass_request_headers on;
       proxy_redirect off;
     }
@@ -69,7 +79,7 @@ http {
       proxy_set_header X-Forwarded-Host  $host;
       proxy_set_header X-Forwarded-Port  $server_port;
       proxy_set_header Authorization     $http_authorization;
-      proxy_set_header Cookie            $http_cookie;   # <-- ensure cookies flow
+      proxy_set_header Cookie            $http_cookie;
       proxy_pass_request_headers on;
       proxy_redirect off;
     }
