--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-
-
 services:
   postgres:
     image: postgres:15
     container_name: sucden_postgres
     restart: always
     ports:
-      - "5434:5432"  # Avoids port conflict with other projects
+      - "5434:5432"
     volumes:
       - sucden_pgdata:/var/lib/postgresql/data
     environment:
@@ -22,20 +20,15 @@ services:
       dockerfile: Dockerfile
     container_name: sucden_app
     restart: unless-stopped
-    working_dir: /var/www/html/sucden
+    working_dir: /var/www/html        # ← match backend Dockerfile WORKDIR
     volumes:
-      - ./backend:/var/www/html/sucden
+      - ./backend:/var/www/html       # ← mount to same path
     ports:
       - "8686:8686"
     depends_on:
       - postgres
-    environment:
-      DB_CONNECTION: pgsql
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_DATABASE: sucden_db
-      DB_USERNAME: sucden
-      DB_PASSWORD: secret
+    env_file:
+      - ./backend/.env.dev
     command: >
       sh -c "
       composer install &&
@@ -45,7 +38,6 @@ services:
       "
     networks:
       - app-network
-
 
   frontend:
     build:
@@ -57,7 +49,6 @@ services:
       - "3001:80"
     networks:
       - app-network
-
 
 volumes:
   sucden_pgdata:
